test/error/error.input104.zc
Cannot cast to a struct, union or void type on line 2
